--- a/ML_PROJECT.ipynb
+++ b/ML_PROJECT.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "📁 1. Mount Google Drive"
+        " 1. Mount Google Drive"
       ],
       "metadata": {
         "id": "Rxyq7sRd4xZv"
@@ -46,7 +46,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "📦 2. Unzip the Geolife Dataset"
+        " 2. Unzip the Geolife Dataset"
       ],
       "metadata": {
         "id": "p6og8xz1484J"
@@ -92,7 +92,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "📑 3. Load and Prepare Data"
+        " 3. Load and Prepare Data"
       ],
       "metadata": {
         "id": "yYu-66Oq5GE4"
@@ -124,7 +124,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "⚙️ 4. Feature Engineering"
+        " 4. Feature Engineering"
       ],
       "metadata": {
         "id": "4wxxvJLn5Ktx"
@@ -163,7 +163,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "🎯 5. Prepare Features and Labels"
+        " 5. Prepare Features and Labels"
       ],
       "metadata": {
         "id": "aitbKp-y5O6u"
@@ -186,7 +186,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "🔀 6. Train-Test Split"
+        " 6. Train-Test Split"
       ],
       "metadata": {
         "id": "tl8wUzIP5TpV"
@@ -209,7 +209,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "🌲 7. Random Forest with Grid Search & Cross-Validation"
+        " 7. Random Forest with Grid Search & Cross-Validation"
       ],
       "metadata": {
         "id": "XzutJoUB5lwl"
@@ -322,7 +322,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "📊 8. Plot Actual vs Predicted (Latitude & Longitude)"
+        " 8. Plot Actual vs Predicted (Latitude & Longitude)"
       ],
       "metadata": {
         "id": "eOjwqiVv5_0-"
@@ -377,7 +377,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "🔮 9. Predict Next Location from Custom Input"
+        " 9. Predict Next Location from Custom Input"
       ],
       "metadata": {
         "id": "2pay_CVi52x3"
