--- a/ML_PROJECT.ipynb
+++ b/ML_PROJECT.ipynb
@@ -67,7 +67,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "✅ Extraction completed.\n"
+            " Extraction completed.\n"
           ]
         }
       ],
@@ -86,7 +86,7 @@
         "with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
         "    zip_ref.extractall(extract_path)\n",
         "\n",
-        "print(\"✅ Extraction completed.\")\n"
+        "print(\" Extraction completed.\")\n"
       ]
     },
     {
@@ -256,20 +256,20 @@
         "    y_pred = grid.predict(X_test)\n",
         "\n",
         "    print(f\"\\n=== {target.upper()} MODEL ===\")\n",
-        "    print(\"✅ Best params:\", grid.best_params_)\n",
-        "    print(f\"📊 CV Train R²: {cv_results['train_r2'].mean():.4f}\")\n",
-        "    print(f\"📊 CV Test R²: {cv_results['test_r2'].mean():.4f}\")\n",
-        "    print(f\"📉 Test R²: {r2_score(y_test, y_pred):.4f}\")\n",
-        "    print(f\"📏 Test RMSE: {np.sqrt(mean_squared_error(y_test, y_pred)):.6f}\")\n",
+        "    print(\" Best params:\", grid.best_params_)\n",
+        "    print(f\" CV Train R²: {cv_results['train_r2'].mean():.4f}\")\n",
+        "    print(f\" CV Test R²: {cv_results['test_r2'].mean():.4f}\")\n",
+        "    print(f\" Test R²: {r2_score(y_test, y_pred):.4f}\")\n",
+        "    print(f\" Test RMSE: {np.sqrt(mean_squared_error(y_test, y_pred)):.6f}\")\n",
         "\n",
         "    model = grid.best_estimator_.named_steps['randomforestregressor']\n",
-        "    print(\"\\n🔍 Feature Importances:\")\n",
+        "    print(\"\\n Feature Importances:\")\n",
         "    for name, importance in zip(X.columns, model.feature_importances_):\n",
         "        print(f\"{name}: {importance:.4f}\")\n",
         "\n",
         "    return grid, y_pred\n",
         "\n",
-        "print(\"🚀 Training models with reduced overfitting...\")\n",
+        "print(\" Training models with reduced overfitting...\")\n",
         "grid_lat, y_lat_pred = train_and_evaluate('lat')\n",
         "grid_lon, y_lon_pred = train_and_evaluate('lon')\n"
       ],
@@ -286,16 +286,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "🚀 Training models with reduced overfitting...\n",
+            " Training models with reduced overfitting...\n",
             "\n",
             "=== LAT MODEL ===\n",
-            "✅ Best params: {'randomforestregressor__max_depth': 3, 'randomforestregressor__max_features': 0.5, 'randomforestregressor__min_samples_leaf': 30, 'randomforestregressor__min_samples_split': 20, 'randomforestregressor__n_estimators': 10}\n",
-            "📊 CV Train R²: 0.9616\n",
-            "📊 CV Test R²: 0.9582\n",
-            "📉 Test R²: 0.9631\n",
-            "📏 Test RMSE: 0.002015\n",
+            " Best params: {'randomforestregressor__max_depth': 3, 'randomforestregressor__max_features': 0.5, 'randomforestregressor__min_samples_leaf': 30, 'randomforestregressor__min_samples_split': 20, 'randomforestregressor__n_estimators': 10}\n",
+            " CV Train R²: 0.9616\n",
+            " CV Test R²: 0.9582\n",
+            " Test R²: 0.9631\n",
+            " Test RMSE: 0.002015\n",
             "\n",
-            "🔍 Feature Importances:\n",
+            " Feature Importances:\n",
             "dist_from_center: 0.0203\n",
             "angle_from_center: 0.2958\n",
             "hour_sin: 0.0481\n",
@@ -303,13 +303,13 @@
             "hour: 0.2619\n",
             "\n",
             "=== LON MODEL ===\n",
-            "✅ Best params: {'randomforestregressor__max_depth': 3, 'randomforestregressor__max_features': 0.5, 'randomforestregressor__min_samples_leaf': 20, 'randomforestregressor__min_samples_split': 20, 'randomforestregressor__n_estimators': 20}\n",
-            "📊 CV Train R²: 0.8563\n",
-            "📊 CV Test R²: 0.8363\n",
-            "📉 Test R²: 0.8126\n",
-            "📏 Test RMSE: 0.003138\n",
+            " Best params: {'randomforestregressor__max_depth': 3, 'randomforestregressor__max_features': 0.5, 'randomforestregressor__min_samples_leaf': 20, 'randomforestregressor__min_samples_split': 20, 'randomforestregressor__n_estimators': 20}\n",
+            " CV Train R²: 0.8563\n",
+            " CV Test R²: 0.8363\n",
+            " Test R²: 0.8126\n",
+            " Test RMSE: 0.003138\n",
             "\n",
-            "🔍 Feature Importances:\n",
+            " Feature Importances:\n",
             "dist_from_center: 0.1653\n",
             "angle_from_center: 0.5795\n",
             "hour_sin: 0.0168\n",
@@ -386,7 +386,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 🔮 Custom input prediction (with delta approach)\n",
+        "#  Custom input prediction (with delta approach)\n",
         "\n",
         "def prepare_input(lat, lon, hour):\n",
         "    return pd.DataFrame([{\n",
@@ -398,7 +398,7 @@
         "    }])\n",
         "\n",
         "\n",
-        "# 🧪 Try custom input\n",
+        "#  Try custom input\n",
         "current_lat = 39.9847\n",
         "current_lon = 116.3184\n",
         "current_hour = 14\n",
@@ -413,8 +413,8 @@
         "pred_lat = current_lat + delta_lat\n",
         "pred_lon = current_lon + delta_lon\n",
         "\n",
-        "print(f\"🧭 Current Location: Latitude={current_lat}, Longitude={current_lon}\")\n",
-        "print(f\"📍 Predicted Next Location: Latitude={pred_lat:.6f}, Longitude={pred_lon:.6f}\")\n",
+        "print(f\" Current Location: Latitude={current_lat}, Longitude={current_lon}\")\n",
+        "print(f\" Predicted Next Location: Latitude={pred_lat:.6f}, Longitude={pred_lon:.6f}\")\n",
         "\n"
       ],
       "metadata": {
@@ -430,8 +430,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "🧭 Current Location: Latitude=39.9847, Longitude=116.3184\n",
-            "📍 Predicted Next Location: Latitude=79.986073, Longitude=232.638090\n"
+            " Current Location: Latitude=39.9847, Longitude=116.3184\n",
+            " Predicted Next Location: Latitude=79.986073, Longitude=232.638090\n"
           ]
         }
       ]
